--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -2,7 +2,7 @@ workflows:
   build_project:
     name: Clone and Run Oliv66
     max_build_duration: 60
-    instance_type: mac_pro  # Specify Mac Studio M4 machine
+    instance_type: mac_mini_m2  # Specify Mac Studio M4 machine
     environment:
       vars:
         REPO_URL: https://github.com/oliviya68/Oliv66.git
